# rahgozar

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  DOC.md  README.md  SF_README.md  config.direct.example.json  config.example.json  config.exit-node.example.json  config.fronting-groups.example.json  config.full.example.json  config.local_bypass.example.json  package-lock.json  package.json
.github/: release-drafter.yml
.github/scripts/: compose_release_body.py
.github/workflows/: prepare-release.yml  release-drafter.yml  release.yml
agent_docs/: architecture_and_navigation.md  full_tunnel_v2_protocol_design.md  full_tunnel_v2_protocol_notes.md  release_and_documentation.md  testing_and_tooling.md
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro  release.jks
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dazzlingnomore/mhrv/: CaInstall.kt  ConfigStore.kt  CuratedGroups.kt  MainActivity.kt  Native.kt  NetworkDetect.kt  PipelineDebugOverlay.kt  ProfileStore.kt  RahgozarApp.kt  RahgozarVpnService.kt  UpdateInstaller.kt  VpnState.kt  VpnStateSync.kt
android/app/src/main/java/com/dazzlingnomore/mhrv/ui/: AppPickerDialog.kt  ConfigSharing.kt  DriveSetupSection.kt  HomeScreen.kt  ProfileBar.kt
android/app/src/main/java/com/dazzlingnomore/mhrv/ui/theme/: Theme.kt
android/app/src/main/java/com/github/shadowsocks/bg/: Tun2proxy.kt
android/app/src/main/res/drawable/: banner.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-fa/: strings.xml
android/app/src/main/res/xml/: locales_config.xml  network_security_config.xml
android/app/src/test/java/com/dazzlingnomore/mhrv/: ConfigStoreFrontingGroupsTest.kt  ConfigStoreTest.kt  CuratedGroupsTest.kt  NotifStatsTest.kt  ProfileStoreTest.kt  UpdateInstallerTest.kt  VpnLifecycleGuardsTest.kt
android/app/src/test/java/com/dazzlingnomore/mhrv/ui/: DiscoverParserTest.kt
assets/apps_script/: Code.cfw.gs  Code.gs  CodeFull.gs  README.md  appsscript.json
assets/apps_script/tests/: auth_guard_test.js  edge_dns_batch_test.js  edge_dns_test.js  perf_test.js
assets/cloudflare/: README.fa.md  README.md  worker.js
assets/exit_node/: README.fa.md  README.md  exit_node.ts  wrapper.ts
assets/fronting-groups/: curated.json
assets/github-actions-tunnel/: README.md  cloudflared-named.md  cloudflared-named.yml  cloudflared-quick.md  cloudflared-quick.yml  ngrok.md  ngrok.yml
assets/openwrt/: rahgozar.init
desktop/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop/scripts/: regen-icons.mjs
desktop/src/: App.svelte  app.css  main.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: cert_ops.rs  commands.rs  lib.rs  logbridge.rs  main.rs  runtime.rs  state.rs
desktop/src/lib/: api.ts  i18n.svelte.ts  tabs.ts  theme.svelte.ts  toast.svelte.ts  updater.svelte.ts
desktop/src/lib/components/: AboutTab.svelte  AdvancedTab.svelte  CaCard.svelte  FrontingGroupsSection.svelte  LogsTab.svelte  SniPoolModal.svelte  StatusTab.svelte  Toaster.svelte  TunnelTab.svelte  UpdateBanner.svelte  UsageTodayCard.svelte
docs/: 2026-06-23-fix-gzip-header-stripping-in-exit-node-path.md  2026-06-24-add-apps-script-obfuscation-workflow.md  2026-06-24-selective-backport-of-tunnel-node-pr-1414.md  android.fa.md  android.md  drive_mode.fa.md  drive_mode.md  drive_oauth_setup.fa.md  drive_oauth_setup.md  fronting-groups.md  full-tunnel-setup.fa.md  full-tunnel-setup.md  guide.fa.md  guide.md  use-as-upstream.fa.md  use-as-upstream.md
docs/changelog/: v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.1.0.md  v2.10.0.md  v2.10.1.md  v2.2.0.md  v2.3.0.md  v2.4.0.md  v2.5.0.md  v2.5.1.md  v2.6.0.md  v2.7.0.md  v2.8.0.md  v2.9.0.md  v2.9.1.md  v2.9.2.md
docs/maintainer/: README.md  SKILL.md
docs/maintainer/assets/: changelog-template.md
docs/maintainer/references/: architecture.md  diagnostic-taxonomy.md  persian-templates.md  release-workflow.md
drive-relay/: Cargo.toml
drive-relay/scripts/: install-drive-relay.sh
drive-relay/src/: config.rs  lib.rs  main.rs  metrics.rs  orphan_gc.rs  poll.rs  session.rs  state.rs  token.rs
drive-relay/systemd/: rahgozar-drive-relay.service
drive-relay/tests/: drive_e2e.rs
drive-wire/: Cargo.toml
drive-wire/src/: filename.rs  frame.rs  lib.rs
scripts/: install-hooks.sh  obfuscate-apps-script.mjs
scripts/git-hooks/: pre-commit
src/: android_jni.rs  bot_block.rs  cache.rs  camouflage.rs  cdn_discover.rs  cert_installer.rs  config.rs  curated_groups.rs  data_dir.rs  direct_mode.rs  doh.rs  domain_fronter.rs  drive_api.rs  drive_client.rs  drive_crypto.rs  drive_oauth.rs  lan_utils.rs  lib.rs  main.rs  mitm.rs  profiles.rs  proxy_server.rs  rlimit.rs  scan_ips.rs  scan_sni.rs  test_cmd.rs  tunnel_client.rs  update_apply.rs  update_check.rs
tunnel-node/: .dockerignore  Cargo.toml  DOC.md  Dockerfile  README.fa.md  README.md
tunnel-node/src/: main.rs  udpgw.rs
