# Standalone crate (not a member of the root rahgozar workspace). The root
# Cargo.toml gained `[workspace]` when the Tauri desktop crate was added,
# which would otherwise force this directory into the workspace and break
# `cargo` invocations from inside `tunnel-node/`. Cargo's documented opt-out
# is an empty `[workspace]` table here. The canonical build path is still
# the Dockerfile (./tunnel-node/Dockerfile) — this only matters for local
# `cargo check` / `cargo test` from inside the directory.
[workspace]

[package]
name = "rahgozar-tunnel-node"
version = "0.1.0"
edition = "2021"
description = "HTTP tunnel bridge for rahgozar (mhrv-rs) full mode — bridges HTTP tunnel requests from Apps Script to real TCP/UDP connections"

[[bin]]
name = "tunnel-node"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
zstd = "0.13"
blake3 = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
